Resolved alignment issue

--- a/src/pages/brands/style.css
+++ b/src/pages/brands/style.css
@@ -483,7 +483,7 @@
   .brands-page-steps-wrapper {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     gap: 22px;
     margin: 18px 0px 0px 0px;
