--- a/src/pages/creators/style.css
+++ b/src/pages/creators/style.css
@@ -538,7 +538,7 @@
   .creators-page-steps-wrapper {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     gap: 22px;
     margin: 18px 0px 0px 0px;
